Fix navbar collapse size and links, home page divs padding

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -23,3 +23,9 @@ img {
 .panel.callout.radius {
   margin-top:20px;
 }
+
+.alternate-block-images
+  {
+    padding-top:75px;
+    padding-bottom:75px;
+  }
